--- a/index.html
+++ b/index.html
@@ -1,65 +1,63 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<link rel="stylesheet" type="text/css" href="resources/main.css">
-</head>
-<body>
+  <head>
+    <title>SafeZone</title>
+    <link rel="stylesheet" type="text/css" href="resources/login.css">
+    <meta name="viewport" content="initial-scale=1.0">
+    <meta charset="utf-8">
+    <style>
+      html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+      #map {
+        height: 100%;
+      }
+    </style>
+  </head>
+  <body>
+  	<div id="loginbox">
+		<form name="login" action="#" onsubmit="check(this.form);">
+			<h1>SafeZone</h1>
+			<h2>Username:  <input type="text" name="userid"/>  </h2>
+			<h2>Password:  <input type="password" name="pswrd" onkeypress="key(event, this.form)"/></h2>
+			<input type="button" onclick="check(this.form)" value="Login" id="login"/>
+		</form>
+	</div>
+		<script language="javascript">
+			function key(e, form) {
+        		if(e.keyCode === 13){
+            		check(form);
+            	}
+        		return false;
+			}
 
-	<div id="floating-panel">
-      <input onclick="setHomicide();" type=button value="Homicide" id="homButton">
-      <input onclick="setRobbery();" type=button value="Robbery" id="robButton">
-      <input onclick="setAssault();" type=button value="Assault" id="assaultButton">
-    </div>
-    <div id="map"></div>
-    <p>Click on the map to add markers.</p>
-	<script src="resources/main.js"></script>
+			function check(form) {/*function to check userid & password*/
+			 /*checks whether the entered userid and password are matching*/
+				if (form.userid.value == "RIN" && form.pswrd.value == "password") {
+		    		window.location.assign('map.html')/*opens the target page while Id & password matches*/
+		  		}
+		 		else {
+		   			alert("Incorrect username or password")/*displays error message*/
+		  		}
+			}
+		</script> 
+	    <div id="map"></div>
+	    <script>
 
-	<input id="pac-input" class="controls" type="text"
-        placeholder="Enter a location">
-    <div id="map"></div>
+		var map;
+		function initMap() {
+		  map = new google.maps.Map(document.getElementById('map'), {
+		    center: {lat: 42.730282, lng: -73.678717},
+		    zoom: 15,
+		    disableDefaultUI: true,
+		    disableDoubleClickZoom: true,
+		    draggable: false
+		  });
+		}
 
-   
-
-
-    </script>
-
-	<div id="locationField">
-    <input id="autocomplete" placeholder="Enter your address" onFocus="geolocate()" type="text"></input>
-    </div>
-
-    <table id="address">
-      <tr>
-        <td class="label">Street address</td>
-        <td class="slimField"><input class="field" id="street_number"
-              disabled="true"></input></td>
-        <td class="wideField" colspan="2"><input class="field" id="route"
-              disabled="true"></input></td>
-      </tr>
-      <tr>
-        <td class="label">City</td>
-        <td class="wideField" colspan="3"><input class="field" id="locality"
-              disabled="true"></input></td>
-      </tr>
-      <tr>
-        <td class="label">State</td>
-        <td class="slimField"><input class="field"
-              id="administrative_area_level_1" disabled="true"></input></td>
-        <td class="label">Zip code</td>
-        <td class="wideField"><input class="field" id="postal_code"
-              disabled="true"></input></td>
-      </tr>
-      <tr>
-        <td class="label">Country</td>
-        <td class="wideField" colspan="3"><input class="field"
-              id="country" disabled="true"></input></td>
-      </tr>
-    </table>
-
-	<script async defer
-		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBGyx-4zqnfA_VWIEbywqF19PniaKZuM2Q&callback=initMap">
-	</script>
-
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBGyx-4zqnfA_VWIEbywqF19PniaKZuM2Q&libraries=places&signed_in=true&callback=initMap"
-        async defer></script>
-	</body>
+	    </script>
+    <!-- </div> -->
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBGyx-4zqnfA_VWIEbywqF19PniaKZuM2Q&callback=initMap" async defer></script>
+  </body>
 </html>
